movietime/movie-src/main/objects/Meal__c/Meal__c.object-meta.xml
<CustomObject>
    <label>Meal</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Meal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>