movietime/movie-src/main/objects/Meal__c/fields/Baby_Harimau_Order__c.field-meta.xml
<CustomField>
    <fullName>Baby_Harimau_Order__c</fullName>
    <label>Baby Harimau Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>