movietime/movie-src/main/objects/Meal__c/fields/Chosen_By__c.field-meta.xml
<CustomField>
    <fullName>Chosen_By__c</fullName>
    <label>Chosen By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Harimau</fullName>
            </value>
            <value>
                <fullName>Baby Harimau</fullName>
            </value>
            <value>
                <fullName>Does Not Count</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>