movietime/movie-src/main/objects/Meal__c/fields/Dining_Type__c.field-meta.xml
<CustomField>
    <fullName>Dining_Type__c</fullName>
    <label>Dining Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dine In</fullName>
            </value>
            <value>
                <fullName>Take-Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>