movietime/movie-src/main/objects/Meal__c/fields/Harimau_Order__c.field-meta.xml
<CustomField>
    <fullName>Harimau_Order__c</fullName>
    <label>Harimau Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>