movietime/movie-src/main/objects/Meal__c/fields/Restaurant__c.field-meta.xml
<CustomField>
    <fullName>Restaurant__c</fullName>
    <label>Restaurant</label>
    <referenceTo>Restaurant__c</referenceTo>
    <relationshipLabel>Meals</relationshipLabel>
    <relationshipName>Meals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>