movietime/movie-src/main/objects/Meal__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>