movietime/movie-src/main/objects/Meal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Restaurant__c</columns>
    <columns>Harimau_Order__c</columns>
    <columns>Baby_Harimau_Order__c</columns>
    <columns>Visited_Date__c</columns>
    <columns>Grand_Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>